--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "ng2-charts": "^1.6.0",
     "rxjs": "^6.2.2",
+    "sweetalert": "^2.1.2",
     "zone.js": "^0.8.19"
   },
   "devDependencies": {
