--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "chart.js": "^2.7.2",
     "core-js": "^2.4.1",
     "ng2-charts": "^1.6.0",
-    "rxjs": "^6.2.2",
+    "rxjs": "^6.3.3",
+    "rxjs-compat": "^6.3.3",
     "sweetalert": "^2.1.2",
     "zone.js": "^0.8.19"
   },
